--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "start": "node ./src/index.js"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "joi": "^17.6.0",
     "mongoose": "^6.3.4"
   },
   "devDependencies": {
