--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "mongoose": "^6.3.4"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.38",
     "nodemon": "^2.0.16"
   }
 }
