--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "redis": "^4.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
