Refactor redis and .env

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 APP_PORT=3000
 MONGODB_URI=mongodb://localhost:27017/e-commerce-backend-system
+SALT_ROUNDS=10
+JWT_SECRET_KEY=blablabla
+JWT_EXPIRES_IN_MINUTE=120
+REDIS_URI=redis://127.0.0.1:6379
