--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Shihab Mahamud <shihab4t@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start:dev": "nodemon ./src/index.js",
+    "start:dev": "nodemon --ext .yml,.yaml,.js,.env ./src/index.js",
     "start": "node ./src/index.js"
   },
   "dependencies": {
@@ -17,7 +17,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
     "morgan": "^1.10.0",
-    "redis": "^4.1.0"
+    "redis": "^4.1.0",
+    "swagger-jsdoc": "^6.2.1",
+    "swagger-ui-express": "^4.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
