--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "author": "Shihab Mahamud <shihab4t@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start:dev": "nodemon --ext .yml,.yaml,.js,.env ./src/index.js",
-    "start": "node ./src/index.js"
+    "start": "node ./src/index.js",
+    "start:watch": "nodemon --ext .yml,.yaml,.js,.env ./src/index.js",
+    "test": "jest --detectOpenHandles",
+    "test:watch": "jest --watchAll --detectOpenHandles"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -23,7 +25,11 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.1",
     "@types/node": "^17.0.38",
-    "nodemon": "^2.0.16"
+    "@types/supertest": "^2.0.12",
+    "jest": "^28.1.1",
+    "nodemon": "^2.0.16",
+    "supertest": "^6.2.3"
   }
 }
