--- a/package.json
+++ b/package.json
@@ -1,38 +1,39 @@
 {
-  "name": "e-commerce-backend-system",
-  "version": "1.0.0",
-  "main": "index.js",
-  "repository": "https://github.com/shihab4t/e-commerce-backend-system.git",
-  "author": "Shihab Mahamud <shihab4t@gmail.com>",
-  "license": "MIT",
-  "scripts": {
-    "start": "node ./src/index.js",
-    "start:watch": "nodemon --ext .yml,.yaml,.js,.env ./src/index.js",
-    "test": "jest",
-    "test:watch": "jest --watchAll"
-  },
-  "dependencies": {
-    "bcrypt": "^5.0.1",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "express-winston": "^4.2.0",
-    "joi": "^17.6.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.4",
-    "morgan": "^1.10.0",
-    "redis": "^4.1.0",
-    "swagger-jsdoc": "^6.2.1",
-    "swagger-ui-express": "^4.4.0",
-    "winston": "^3.7.2",
-    "winston-mongodb": "^5.0.7"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/jest": "^28.1.1",
-    "@types/node": "^17.0.38",
-    "@types/supertest": "^2.0.12",
-    "jest": "^28.1.1",
-    "nodemon": "^2.0.16",
-    "supertest": "^6.2.3"
-  }
+    "name": "e-commerce-backend-system",
+    "version": "1.0.0",
+    "main": "index.js",
+    "repository": "https://github.com/shihab4t/e-commerce-backend-system.git",
+    "author": "Shihab Mahamud <shihab4t@gmail.com>",
+    "license": "MIT",
+    "scripts": {
+        "start": "node ./src/index.js",
+        "start:watch": "nodemon --ext .yml,.yaml,.js,.env ./src/index.js",
+        "test": "jest",
+        "test:watch": "jest --watchAll"
+    },
+    "dependencies": {
+        "bcrypt": "^5.0.1",
+        "dotenv": "^16.0.1",
+        "express": "^4.18.1",
+        "express-winston": "^4.2.0",
+        "joi": "^17.6.0",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^6.3.4",
+        "morgan": "^1.10.0",
+        "redis": "^4.1.0",
+        "swagger-jsdoc": "^6.2.1",
+        "swagger-ui-express": "^4.4.0",
+        "winston": "^3.7.2",
+        "winston-mongodb": "^5.0.7"
+    },
+    "devDependencies": {
+        "@types/express": "^4.17.13",
+        "@types/jest": "^28.1.1",
+        "@types/node": "^17.0.38",
+        "@types/supertest": "^2.0.12",
+        "jest": "^28.1.1",
+        "nodemon": "^2.0.16",
+        "prettier": "2.6.2",
+        "supertest": "^6.2.3"
+    }
 }
