--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "license": "MIT",
     "scripts": {
         "start": "node ./src/index.js",
-        "start:watch": "nodemon --ext .yml,.yaml,.js,.env ./src/index.js",
+        "start:watch": "nodemon --ext .yml,.yaml,.js,.env,.json ./src/index.js",
         "test": "jest",
         "test:watch": "jest --watchAll"
     },
